# linesweeper

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
.helix/: languages.toml
benches/: linebender_logo.rs  painted_dreams.rs  synthetic.rs
docs/: sweep.typ
examples/: boolean_op.rs  bus.rs  curve_order.rs  svg_util.rs  visualize_op.rs  winding-numbers.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cubic_roots.rs  curve_order.rs  mutation.rs  partition_point.rs  quadratic_signs.rs  solve_for_t.rs  strong_comparison.rs  strong_comparison_no_slop.rs
nix/: kompari.nix
proptest-regressions/: topology.txt
proptest-regressions/sweep/: sweep_line.txt  weak_ordering.txt
src/: arbitrary.rs  curve.rs  generators.rs  geom.rs  lib.rs  num.rs  order.rs  perturbation.rs  position.rs  positioning_graph.rs  segment_tree.rs  segments.rs  topology.rs  treevec.rs  typed_vec.rs
src/curve/: mod.rs  split_quad.rs  transverse.rs
src/snapshots/: linesweeper__tests__empty_horizontals.snap  linesweeper__tests__graphite_hang.snap  linesweeper__tests__two_squares.snap  linesweeper__topology__tests__diamond.snap  linesweeper__topology__tests__inner_loop.snap  linesweeper__topology__tests__merge_monotonic_segs.snap  linesweeper__topology__tests__merge_monotonic_segs_with_cut.snap  linesweeper__topology__tests__nested_squares.snap  linesweeper__topology__tests__square.snap  linesweeper__topology__tests__square_and_diamond.snap  linesweeper__topology__tests__square_with_double_back.snap  linesweeper__topology__tests__squares_with_gaps.snap
src/sweep/: mod.rs  output_event.rs  range.rs  sweep_line.rs  weak_ordering.rs
src/sweep/snapshots/: linesweeper__sweep__sweep_line__tests__conservative_line_order.snap  linesweeper__sweep__sweep_line__tests__regression_position_state.snap  linesweeper__sweep__sweep_line__tests__square.snap  linesweeper__sweep__sweep_line__tests__square_and_diamond.snap  linesweeper__sweep__sweep_line__tests__two_squares.snap  linesweeper__sweep__weak_ordering__tests__regression_position_state.snap  linesweeper__sweep__weak_ordering__tests__square.snap  linesweeper__sweep__weak_ordering__tests__two_squares.snap
tests/: fonts.rs  regression.rs  snapshots.rs
tests/regression/: font_awesome_0.yml  font_awesome_1.yml  font_awesome_2.yml  graphite_0.txt  graphite_0.yml  graphite_1.txt  graphite_1.yml  graphite_2.txt  graphite_2.yml  graphite_3.txt  graphite_3.yml  graphite_4.txt  graphite_4.yml  graphite_5.txt  graphite_5.yml  graphite_6.txt  graphite_6.yml  graphite_7.txt  graphite_7.yml
util/: Cargo.toml
util/src/: lib.rs
