[package]
name = "linesweeper"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joe Neeman <joe@neeman.me>"]
description = "Robust sweep-line algorithm and two-dimensional boolean ops"
repository = "https://github.com/jneem/linesweeper"

[workspace]
members = ["util"]

[workspace.dependencies]
kurbo = "0.11.1"
svg = { version = "0.18", default-features = false }
usvg = { version = "0.44.0", default-features = false }

[features]
arbitrary = ["dep:arbitrary"]
slow-asserts = []
generators = []
default = []

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
arrayvec = { version = "0.7.6", features = ["serde"] }
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
kurbo = { version = "0.11.1", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.80"
assert_matches = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
criterion = "0.5.1"
glob = "0.3.2"
i_overlay = "1.9.4"
insta = { version = "1.41.1", features = ["serde", "ron"] }
proptest = "1.4.0"
svg = { version = "0.18", default-features = false }
usvg = { version = "0.44.0", default-features = false }
linesweeper_util = { path = "util" }
tiny-skia = "0.11.4"
kompari = { git = "https://github.com/linebender/kompari" }
libtest-mimic = "0.8.1"
skrifa = "0.31.0"

[profile.dev.package."*"]
opt-level = 2

[[bench]]
name = "linebender_logo"
harness = false

[[bench]]
name = "synthetic"
harness = false
required-features = ["generators"]

[[example]]
name = "boolean_op"
required-features = ["generators"]

[[test]]
name = "snapshots"
harness = false

[[test]]
name = "fonts"
harness = false
