[package]
name = "linesweeper-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.2"
libfuzzer-sys = "0.4"

[dependencies.linesweeper]
path = ".."

[[bin]]
name = "mutation"
path = "fuzz_targets/mutation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "partition_point"
path = "fuzz_targets/partition_point.rs"
test = false
doc = false
bench = false

