[package]
name = "linesweeper-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.2"
kurbo = "0.11.1"
libfuzzer-sys = "0.4"

[dependencies.linesweeper]
path = ".."

[[bin]]
name = "mutation"
path = "fuzz_targets/mutation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "partition_point"
path = "fuzz_targets/partition_point.rs"
test = false
doc = false
bench = false


[[bin]]
name = "curve_order"
path = "fuzz_targets/curve_order.rs"
test = false
doc = false
bench = false

[[bin]]
name = "strong_comparison"
path = "fuzz_targets/strong_comparison.rs"
test = false
doc = false
bench = false

[[bin]]
name = "quadratic_signs"
path = "fuzz_targets/quadratic_signs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cubic_roots"
path = "fuzz_targets/cubic_roots.rs"
test = false
doc = false
bench = false
